Finalizei a seção 004 grid do modulo de layouts e criei a tarefa proposta

--- a/003_criando-layouts-com-bootstrap/004_grid/009_gutters.html
+++ b/003_criando-layouts-com-bootstrap/004_grid/009_gutters.html
@@ -11,45 +11,42 @@
 </head>
 
 <body>
-    <!--Gutters-->
-    <div class="container" id="gutter">
-        <div class="row gx-2">
-            <div class="col-6">
-                <p>GX</p>
-            </div>
-            <div class="col-6">
-                <p>GX</p>
-            </div>
-        </div>
-    </div>
-
+    <!--GUTTERS-->
     <div class="container" id="gutter">
         <div class="row">
-            <div class="col-6">
-                <p>GY</p>
+            <div class="col gx-5">
+                <p>GX</p>
             </div>
-            <div class="col-6">
-                <p>GY</p>
+            <div class="col">
+                <p>GX</p>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col">
+                <p>GY</p>
+            </div>
+            <div class="col">
+                <p>GY</p>
+            </div>
+        </div>        
+
+        <div class="row ">
+            <div class="col-6">
+                <p>G</p>
+            </div>
+            <div class="col-6">
+                <p>G</p>
+            </div>
+            <div class="col-6">
+                <p>G</p>
+            </div>
+            <div class="col-6">
+                <p>G</p>
+            </div>
+        </div>  
     </div>
 
-    <div class="container" id="gutter">
-        <div class="row g-5">
-            <div class="col-6">
-                <p>G</p>
-            </div>
-            <div class="col-6">
-                <p>G</p>
-            </div>
-            <div class="col-6">
-                <p>G</p>
-            </div>
-            <div class="col-6">
-                <p>G</p>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
