--- a/004_bootstrap-icons/003_tarefa-02/index.html
+++ b/004_bootstrap-icons/003_tarefa-02/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="h-100">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="d-flex h-100 align-items-center">
+<body class="py-5">
     <div class="container">
-        <div class="row">
+        <div class="row border-bottom">
             <div class="col-4">
                 <i class="bi bi-apple"></i>
             </div>
@@ -30,7 +30,7 @@
                 </p>
             </div>
         </div>
-        <div class="row">
+        <div class="row border-bottom">
             <div class="col-4">
                 <i class="bi bi-facebook"></i>
             </div>
