Criei o header do projeto e configurei os estilos gerais do css

--- a/005_projeto1-exposicao-artes/index.html
+++ b/005_projeto1-exposicao-artes/index.html
@@ -13,8 +13,25 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <h1>Teste</h1>
-    <i class="bi bi-windows"></i>
+    <!--HEADER-->
+    <div class="container-fluid">
+        <header class="row" id="header">
+            <div id="logo-container">
+                <img id="logo" src="./img/art_logo.svg" alt="Art">
+                <h1>Art</h1>
+            </div>
+            <p>Exibições de arte urbana</p>
+        </header>
+        <nav id="navbar" class="container">
+            <div class="row justify-content-center">
+                <a href="#">Home</a>
+                <a href="#">Projetos</a>
+                <a href="#">Artistas</a>
+                <a href="#">Contato</a>
+            </div>
+        </nav>
+    </div>
+    <!-- ... -->
 
 </body>
 </html>
