--- a/005_projeto1-exposicao-artes/index.html
+++ b/005_projeto1-exposicao-artes/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!--Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!--CSS do Art-->
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
+
 <body>
     <!--HEADER-->
     <div class="container-fluid">
@@ -43,6 +46,54 @@
             </div>
         </div>
     </div>
-
+    <!--GALLERY-->
+    <div class="container" id="gallery-container">
+        <div class="col-12">
+            <h1>Artes em destaque</h1>
+        </div>
+        <div class="row gx-5">
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img-2"></div>
+                <h3>Obra de Arthur</h3>
+                <p class="secondary-color">
+                    Realizada em 26/01/2018
+                </p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img-3"></div>
+                <h3>Grafite da Av. Paulista</h3>
+                <p class="secondary-color">
+                    Realizada em 14/06/2021
+                </p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img-4"></div>
+                <h3>Arte em conjunto do Metrô</h3>
+                <p class="secondary-color">
+                    Realizada em: 19/01/2018
+                </p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img-5"></div>
+                <h3>Obra de Paulo</h3>
+                    <p class="secondary-color">
+                        Realizada em: 12/12/2015
+                    </p>
+                    <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img-6"></div>
+                <h3>Grafite no centro da cidade</h3>
+                    <p class="secondary-color">
+                        Realizada em: 13/02/2012
+                    </p>
+                    <a href="#" class="btn">Detalhes</a>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
