Finalizei a seção de contéudo

--- a/006_elementos-de-conteudo/010_tarefa-03/index.html
+++ b/006_elementos-de-conteudo/010_tarefa-03/index.html
@@ -18,13 +18,13 @@
             </p>
             <img class="col-6 img-fluid" src="./img/noite-estrelada.jpg" alt="Noite estrelada">
 
-            <div class="row justify-content-around mt-2">
+            <div class="row mt-2 justify-content-evenly">
                 <div class="col-3">
-                    <span class="h4">Elementos Visuais:</span>
+                    <span class="h4 d-block py-3">Elementos Visuais:</span>
 
                     <ul class="list-unstyled">
-                        <li class="h6">Céu Noturno Turbulento:</li>
-                        <ul>
+                        <li class="h6 text-center">Céu Noturno Turbulento:</li>
+                        <ul class="list-unstyled">
                             <li>
                                 <p>
                                     Representação expressiva do céu noturno com redemoinhos e espirais.
@@ -41,11 +41,11 @@
                     </ul>
                 </div>
                 <div class="col-3">
-                    <span class="h4">Significados e Contexto:</span>
+                    <span class="h4 d-block py-3">Significados e Contexto:</span>
 
                     <ul class="list-unstyled">
-                        <li class="h6">Expressão Emocional:</li>
-                        <ul>
+                        <li class="h6 text-center">Expressão Emocional:</li>
+                        <ul class="list-unstyled">
                             <li>
                                 <p>A pintura reflete a tumultuada vida emocional de Van Gogh.
                                 </p>
