--- a/007_formularios/003_form-control.html
+++ b/007_formularios/003_form-control.html
@@ -33,7 +33,7 @@
             <div class="col-4 mb-4">
                 <label for="title" class="form-label">Título do post:</label>
 
-                <input type="text"  class="form-control form-control" name="title" id="title" placeholder="Digite seu título">
+                <input type="text"  class="form-control" name="title" id="title" placeholder="Digite seu título">
             </div>
             <div class="col-4 mb-4">
                 <label for="content" class="form-label">Conteúdo:</label>
