--- a/007_formularios/016_tarefa-04/index.html
+++ b/007_formularios/016_tarefa-04/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <div class="container">
-        <h1>Cadastro</h1>
+<body class="d-flex h-100 align-items-center">
+    <div class="container border rounded">
+        <h1 class="text-center m-4">Cadastro</h1>
         <form class="row">
             <div class="col-3 col-md-2 mb-2">
                 <label for="code" class="form-label">Código</label>
@@ -24,15 +24,26 @@
                 <label for="quantity" class="form-label">Quantidate</label>
                 <input type="number" id="quantity" class="form-control">
             </div>        
-            <div class="col-5 mb-2">
+            <div class="col-6 col-md-5 mb-2">
                 <label for="category" class="form-label">Categoria</label>
-                <select class="form-select" aria-label="Default select example">
+                <select class="form-select">
                     <option selected>Selecione uma categoria</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option value="roupas">Roupas</option>
+                    <option value="calçados">Calçados</option>
+                    <option value="joias">Joias</option>
                   </select>
             </div>  
+            <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" id="in-stock">
+                <label class="form-check-label" for="in-stock">
+                  No estoque
+                </label>
+            </div>
+            <div class="mb-2">
+                <label for="description" class="form-label">Descrição</label>
+                <textarea class="form-control" placeholder="Descreva o produto." id="description"></textarea> 
+            </div>
+              <button type="submit" class="btn btn-primary">Cadastrar</button>
         </form>
     </div>
 </body>
