--- a/008_projeto-2-tela-login-cadastro/register.html
+++ b/008_projeto-2-tela-login-cadastro/register.html
@@ -12,6 +12,55 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    
+    <div class="container col-11 col-md-9" id="form-container">
+        <div class="row gx-5">
+            <div class="col-md-6">
+                <h2>Realize o seu cadastro</h2>
+                <form>
+                    <div class="form-floating mb-3">
+                        <input type="text" name="name" id="name" class="form-control" placeholder="Digite o seu nome">
+                        <label for="name" class="form-label">Digite o seu nome</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" name="last-name" id="last-name" class="form-control" placeholder="Digite o seu sobrenome">
+                        <label for="last-name" class="form-label">Digite o seu sobrenome</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="email" name="email" id="email" class="form-control" placeholder="Digite o seu e-mail">
+                        <label for="email" class="form-label">Digite o seu e-mail</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" name="password" id="password" class="form-control" placeholder="Digite a sua senha">
+                        <label for="password" class="form-label">Digite a sua senha </label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" name="confirm-password" id="confirm-password" class="form-control" placeholder="Confirme sua senha">
+                        <label for="confirm-password" class="form-label">Confirme sua senha</label>
+                    </div>
+                    <div class="mb-3">
+                        <div class="form-check mb-2">
+                            <input type="checkbox" class="form-check-input" id="agree-form" value="">
+                            <label for="agree-form" class="form-check-label">Você aceita os <a href="#">termos de serviço?</a></label>
+                        </div>
+                        <div class="form-check mb-2">
+                            <input type="checkbox" class="form-check-input" id="newsletter" value="" checked>
+                            <label for="newsletter" class="form-check-label">Deseja receber as nossas newsletter?</label>
+                        </div>
+                        <input type="submit" value="Cadastrar" class="btn btn-primary">
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6">
+                <div class="row align-items-center">
+                    <div class="col-12">
+                        <img src="./img/hello.svg" alt="tela de registro" class="img-fluid">
+                    </div>
+                    <div class="col-12" id="link-container">
+                        <a href="./index.html">Eu já tenho uma conta</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
